Stream.toList() replaces Collectors.toList()